...
            android:text="@string/app_name"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/e_mail"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_email_icon"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/RegisterFirstName"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"
            android:textColorHint="#A7A7A7"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_name"
                android:inputType="text"
                android:nextFocusDown="@id/RegisterLastName"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_name"
                android:inputType="text"
                android:nextFocusDown="@id/RegisterPassword"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:drawableStart="@drawable/custom_password_icon"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#A7A7A7"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

    </LinearLayout>
...
