...
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="PROCEED"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/skip"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="285dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="SKIP"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="20sp" />

</RelativeLayout>
