...
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="sensors">Sensors</string>
    <string name="employees">Employees</string>
    <string name="areas">Areas</string>
    <string name="latest_temperature">Latest temperature</string>
...
